fixed footer overlapping with content

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -17,7 +17,7 @@
   }  &:after {
     clear:both;
   }  // For IE 6/7 (trigger hasLayout)
-  zoom:1;
+  //zoom:1;
 //   & {
 //     zoom:1;
 //     }
